added a section and an image

--- a/index.html
+++ b/index.html
@@ -10,7 +10,15 @@
 <body>
     <section id="dashboard">
         <div class="dashboard-conatainer">
+            <div class="dash-report">
+                <div class="d-report">
+                    <img src="ress/img/girl.jpg" alt="" srcset="">
+                     <h1>nmbvcnnxb</h1>
+                </div>
+            </div>
+            <div class="dash-work">
 
+            </div>
         </div>
     </section>
     <script src="ress/js/script.js"></script>
