finish a div section

--- a/index.html
+++ b/index.html
@@ -13,11 +13,23 @@
             <div class="dash-report">
                 <div class="d-report">
                     <img src="ress/img/girl.jpg" alt="" srcset="">
-                     <h1>nmbvcnnxb</h1>
+                     <h5>Report for</h5>
+                     <h2>Jeremy <br> Robson</h2>
+                </div>
+                <div class="d-day">
+                    <h5>Daily</h5>
+                    <h5> <span>Weekly</span> </h5>
+                    <h5>Monthly</h5>
                 </div>
             </div>
             <div class="dash-work">
+                <div class="dash-work">
+                    <div class="work">
+                        <div class="d-work">
 
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
