created a dash work

--- a/index.html
+++ b/index.html
@@ -22,11 +22,14 @@
                     <h5>Monthly</h5>
                 </div>
             </div>
+
             <div class="dash-work">
-                <div class="dash-work">
+                <div class="dash-works">
                     <div class="work">
                         <div class="d-work">
-
+                            <span>Work</span> <span>...</span>
+                            <h2>32hrs</h2>
+                            <h5>Last Week-36hrs</h5>
                         </div>
                     </div>
                 </div>
