--- a/index.html
+++ b/index.html
@@ -24,14 +24,24 @@
             </div>
 
             <div class="dash-work">
+
                 <div class="dash-works">
+
                     <div class="work">
                         <div class="d-work">
-                            <span>Work</span> <span>...</span>
+                            <span class="span-work">Work</span> <span class="dots span-work">...</span>
                             <h2>32hrs</h2>
-                            <h5>Last Week-36hrs</h5>
+                            <p>Last Week-36hrs</p>
                         </div>
                     </div>
+                    <div class="work m-work">
+                        <div class="d-work">
+                            <span class="span-work">Work</span> <span class="dots span-work">...</span>
+                            <h2>32hrs</h2>
+                            <p>Last Week-36hrs</p>
+                        </div>
+                    </div>
+                    
                 </div>
             </div>
         </div>
