added the the third row

--- a/index.html
+++ b/index.html
@@ -24,9 +24,7 @@
             </div>
 
             <div class="dash-work">
-
                 <div class="dash-works">
-
                     <div class="work">
                         <div class="d-work">
                             <span class="span-work">Work</span> <span class="dots span-work">...</span>
@@ -36,8 +34,44 @@
                     </div>
                     <div class="work m-work">
                         <div class="d-work">
+                            <span class="span-work">Excercise</span> <span class="dots span-work">...</span>
+                            <h2>4hrs</h2>
+                            <p>Last Week-36hrs</p>
+                        </div>
+                    </div>
+                    
+                </div>
+
+                <div class="dash-works">
+                    <div class="work">
+                        <div class="d-work">
                             <span class="span-work">Work</span> <span class="dots span-work">...</span>
                             <h2>32hrs</h2>
+                            <p>Last Week-36hrs</p>
+                        </div>
+                    </div>
+                    <div class="work m-work">
+                        <div class="d-work">
+                            <span class="span-work">Excercise</span> <span class="dots span-work">...</span>
+                            <h2>4hrs</h2>
+                            <p>Last Week-36hrs</p>
+                        </div>
+                    </div>
+                    
+                </div>
+
+                <div class="dash-works">
+                    <div class="work">
+                        <div class="d-work">
+                            <span class="span-work">Work</span> <span class="dots span-work">...</span>
+                            <h2>32hrs</h2>
+                            <p>Last Week-36hrs</p>
+                        </div>
+                    </div>
+                    <div class="work m-work">
+                        <div class="d-work">
+                            <span class="span-work">Excercise</span> <span class="dots span-work">...</span>
+                            <h2>4hrs</h2>
                             <p>Last Week-36hrs</p>
                         </div>
                     </div>
