made use of fontawesome for the dark icon

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="ress/css/style.css">
+    <link rel="stylesheet" href="ress/fontawe/fontawesome-free-5.15.2-web/css/all.css">
     <title>Document</title>
 </head>
 <body>
@@ -14,23 +15,7 @@
             <label class="theme-switch" for="checkbox">
               <input type="checkbox" id="checkbox" />
               <div class="slider">
-                <svg
-                  xmlns="http://www.w3.org/2000/svg"
-                  width="30"
-                  height="30"
-                  viewBox="0 0 24 24"
-                  fill="none"
-                  stroke="currentColor"
-                  stroke-width="2"
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                  class="feather feather-moon"
-                >
-                  <path
-                    d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z"
-                  ></path>
-                </svg>
-              </div>
+                <i class="fas fa-moon fa-3x"></i>
             </label>
           </div>
 
